--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/database": "^5.5",
-        "illuminate/http": "^5.5",
-        "illuminate/notifications": "^5.5",
-        "illuminate/routing": "^5.5",
-        "illuminate/support": "^5.5",
+        "illuminate/database": "^5.5|^6.0",
+        "illuminate/http": "^5.5|^6.0",
+        "illuminate/notifications": "^5.5|^6.0",
+        "illuminate/routing": "^5.5|^6.0",
+        "illuminate/support": "^5.5|^6.0",
         "nesbot/carbon": " ~1.21"
     },
     "require-dev": {
