--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "illuminate/notifications": "^5.5|^6.0",
         "illuminate/routing": "^5.5|^6.0",
         "illuminate/support": "^5.5|^6.0",
-        "nesbot/carbon": " ~1.21"
+        "nesbot/carbon": " ^2.0"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.23.4",
